// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inquirer-select-pro > data model > should display default options correctly 1`] = `
"? Choose movie:
>> Modern Times
>[ ] The Shawshank Redemption (1994)
 [ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)"
`;

exports[`inquirer-select-pro > data model > should display default options correctly 2`] = `
"? Choose movie:
>> Modern Times (1936) mo
>[✔] Modern Times (1936)
 [ ] North by Northwest (1959)
 [ ] Monty Python and the Holy Grail (1975)"
`;

exports[`inquirer-select-pro > interactions > should be possible to filter in radio selection mode 1`] = `
"? Choose movie: (Press <enter> to proceed)
>> Type to search
> The Shawshank Redemption (1994)
  The Godfather (1972)
  The Godfather: Part II (1974)
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should clear input after the option is selected (clearInputWhenSelected=true) 1`] = `
"? Choose movie: (Press <backspace> to remove option)
>> Goodfellas (1990)
>[✔] Goodfellas (1990)
 [ ] The Godfather (1972)
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should toggle all options when press <ctrl> + <a> 1`] = `
"? Choose movie: (Press <backspace> to remove option)
>> a, b, c, d
>[✔] a
 [✔] b
 [✔] c
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should toggle all options when press <ctrl> + <a> 2`] = `
"? Choose movie: (Press <backspace> to remove option)
>> Type to search
>[ ] a
 [ ] b
 [ ] c
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should work as expected when confirmDelete=true 1`] = `
"? Choose movie: (Press <backspace> to remove option)
>> The Shawshank Redemption (1994) 
 [✔] The Shawshank Redemption (1994)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)"
`;

exports[`inquirer-select-pro > interactions > should work as expected when confirmDelete=true 2`] = `
"? Choose movie: (Press <backspace> again to remove option, <up/down> or <esc> to
 exit)
>> The Shawshank Redemption (1994) 
 [✔] The Shawshank Redemption (1994)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)"
`;

exports[`inquirer-select-pro > interactions > should work as expected when confirmDelete=true 3`] = `
"? Choose movie: (Press <backspace> to remove option)
>> The Shawshank Redemption (1994) 
 [✔] The Shawshank Redemption (1994)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)"
`;

exports[`inquirer-select-pro > interactions > should work as expected when confirmDelete=true 4`] = `
"? Choose movie: (Press <backspace> again to remove option)
>> The Shawshank Redemption (1994) 
 [✔] The Shawshank Redemption (1994)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)"
`;

exports[`inquirer-select-pro > interactions > should work as expected when confirmDelete=true 5`] = `
"? Choose movie:
>> Type to search
 [ ] The Shawshank Redemption (1994)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a function and filter disabled 1`] = `
"? Choose movie: (Press <tab> to select/deselect, <enter> to proceed) 
>[ ] The Shawshank Redemption (1994)
 [ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 1`] = `
"? Choose movie: (Press <tab> to select/deselect, <enter> to proceed) 
>[ ] The Shawshank Redemption (1994)
 [ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 2`] = `
"? Choose movie: (Press <tab> to select/deselect, <enter> to proceed) 
 [ ] The Dark Knight (2008)
>[ ] 12 Angry Men (1957)
 [ ] Schindler's List (1993)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 3`] = `
"? Choose movie: (Press <backspace> to remove option) 12 Angry Men (1957)
 [ ] The Dark Knight (2008)
>[✔] 12 Angry Men (1957)
 [ ] Schindler's List (1993)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 4`] = `
"? Choose movie: (Press <backspace> to remove option) 12 Angry Men (1957)
 [ ] The Dark Knight (2008)
>[✔] 12 Angry Men (1957)
 [ ] Schindler's List (1993)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 5`] = `
"? Choose movie: (Press <backspace> to remove option) 
 [ ] 12 Angry Men (1957)
>[ ] Schindler's List (1993)
 [ ] Pulp Fiction (1994)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 6`] = `
"? Choose movie: (Press <backspace> to remove option) 
 [ ] 12 Angry Men (1957)
>[ ] Schindler's List (1993)
 [ ] Pulp Fiction (1994)"
`;

exports[`inquirer-select-pro > interactions > should work when options is a normal array 7`] = `
"? Choose movie: (Press <backspace> to remove option) 
 [ ] 12 Angry Men (1957)
>[ ] Schindler's List (1993)
 [ ] Pulp Fiction (1994)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 1`] = `
"? Choose movie: (Press <tab> to select/deselect, <enter> to proceed)
>> Type to search
>[ ] The Shawshank Redemption (1994)
 [ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)
(Use arrow keys to reveal more options)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 2`] = `
"? Choose movie: (Press <tab> to select/deselect, <enter> to proceed)
>> Type to search
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)
>[ ] 12 Angry Men (1957)
 [ ] Schindler's List (1993)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 3`] = `
"? Choose movie: (Press <backspace> to remove option)
>> 12 Angry Men (1957)
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)
>[✔] 12 Angry Men (1957)
 [ ] Schindler's List (1993)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 4`] = `
"? Choose movie: (Press <backspace> to remove option)
>> 12 Angry Men (1957) god
 [ ] The Godfather: Part II (1974)
 [ ] The Dark Knight (2008)
>[✔] 12 Angry Men (1957)
 [ ] Schindler's List (1993)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 5`] = `
"? Choose movie: (Press <backspace> to remove option)
>> 12 Angry Men (1957) god
>[ ] Goodfellas (1990)
 [ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Good, the Bad and the Ugly (1966)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 6`] = `
"? Choose movie: (Press <backspace> to remove option)
>> 12 Angry Men (1957), Goodfellas (1990) god
 [✔] Goodfellas (1990)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Good, the Bad and the Ugly (1966)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 7`] = `
"? Choose movie: (Press <backspace> to remove option)
>> 12 Angry Men (1957), Goodfellas (1990) god
 [✔] Goodfellas (1990)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Good, the Bad and the Ugly (1966)"
`;

exports[`inquirer-select-pro > interactions > should work when options is an async function 8`] = `
"? Choose movie:
>> 12 Angry Men (1957)
 [ ] Goodfellas (1990)
>[ ] The Godfather (1972)
 [ ] The Godfather: Part II (1974)
 [ ] The Good, the Bad and the Ugly (1966)"
`;
